Allow multiple --serialize

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py33, py32, py27, py27-configparser, pypy
 deps=
   pytest
 commands=
-  py.test tests.py
+  py.test -vvv tests.py
 
 [testenv:py27-configparser]
 deps=
